@@ -11,6 +11,7 @@ Cobbler CHANGELOG
 - setting per-system kickstart template to "" or "delete" restores inheritance
 - if repos in profiles no longer exist, remove noisy warning, move to "check"
 - move warning about reposync to check also (check is more useful at runtime now)
+- build pxe trees for systems even if interface0 is undefined
 
 - Fri May 09 2008 - 0.9.1
 - patch to allow yumopts to override gpgcheck
